reran with as few grabow rate rules as possible

--- a/base/output_edge.html
+++ b/base/output_edge.html
@@ -26368,8 +26368,8 @@ X(1)+HO2X(180)=O*(11)+OH*(12)                       2.551045e+21 0.000     24.79
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-15.7</td><td>+1.0</td><td>+6.7</td><td>+9.5</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(4.87241e+15,'m^2/(mol*s)'), n=0.639876, Ea=(317.057,'kJ/mol'), T0=(1,'K'), comment="""Estimated using an average for rate rule [AdsorbateVdW;*=O]
+    <td>-12.9</td><td>+3.6</td><td>+9.0</td><td>+11.8</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(4.78261e+20,'m^2/(mol*s)'), n=-0.1875, Ea=(317.057,'kJ/mol'), T0=(1,'K'), comment="""Estimated using an average for rate rule [AdsorbateVdW;*=O]
 Euclidian distance = 0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Abstraction_vdW""")</span></td>
@@ -26388,7 +26388,7 @@ family: Surface_Abstraction_vdW""")</span></td>
 ! Euclidian distance = 0
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Abstraction_vdW
-O*(11)+H2O*(13)=H*(10)+HO2X(180)                    4.872411e+19 0.640     75.778   
+O*(11)+H2O*(13)=H*(10)+HO2X(180)                    4.782614e+24 -0.188    75.778   
 </td>
 </tr>
 </tbody>
@@ -26677,8 +26677,8 @@ O*(11)+CH3OH*(22)=OH*(12)+CH3OX(46)                 4.215000e+24 -0.101    22.15
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-31.2</td><td>-6.9</td><td>+1.3</td><td>+5.4</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(2.43621e+15,'m^2/(mol*s)'), n=0.639876, Ea=(462.615,'kJ/mol'), T0=(1,'K'), comment="""Estimated using an average for rate rule [AdsorbateVdW;*=O]
+    <td>-28.5</td><td>-4.3</td><td>+3.7</td><td>+7.7</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(2.39131e+20,'m^2/(mol*s)'), n=-0.1875, Ea=(462.615,'kJ/mol'), T0=(1,'K'), comment="""Estimated using an average for rate rule [AdsorbateVdW;*=O]
 Euclidian distance = 0
 family: Surface_Abstraction_vdW""")</span></td>
 </tr>
@@ -26695,7 +26695,7 @@ family: Surface_Abstraction_vdW""")</span></td>
 ! Estimated using an average for rate rule [AdsorbateVdW;*=O]
 ! Euclidian distance = 0
 ! family: Surface_Abstraction_vdW
-O*(11)+CH3OH*(22)=H*(10)+SX(182)                    2.436205e+19 0.640     110.568  
+O*(11)+CH3OH*(22)=H*(10)+SX(182)                    2.391307e+24 -0.188    110.568  
 </td>
 </tr>
 </tbody>
@@ -26833,8 +26833,8 @@ OH*(12)+CO2*(15)=X(1)+CHO3X(93)                     9.327880e+19 -0.258    17.51
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-14.4</td><td>+1.4</td><td>+6.6</td><td>+9.2</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(305.635,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;HO*]
+    <td>-12.4</td><td>+3.4</td><td>+8.6</td><td>+11.2</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(305.635,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;HO*]
 Euclidian distance = 2.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW
@@ -26856,7 +26856,7 @@ Ea raised from 305.3 to 305.6 kJ/mol to match endothermicity of reaction.""")</s
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
 ! Ea raised from 305.3 to 305.6 kJ/mol to match endothermicity of reaction.
-OH*(12)+CO2*(15)=X(1)+CHO3X(94)                     7.849146e+22 -0.517    73.049   
+OH*(12)+CO2*(15)=X(1)+CHO3X(94)                     6.250000e+24 -0.475    73.049   
 </td>
 </tr>
 </tbody>
@@ -28158,11 +28158,12 @@ CO2*(15)+HCO*(16)=X(1)+C2HO3X(95)                   1.243000e+22 0.000     45.55
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-2.2</td><td>+7.5</td><td>+10.7</td><td>+12.3</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(188.317,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;C*]
+    <td>+4.4</td><td>+11.8</td><td>+14.2</td><td>+15.4</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(145.044,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;C*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
-family: Surface_Addition_Single_vdW""")</span></td>
+family: Surface_Addition_Single_vdW
+Ea raised from 143.2 to 145.0 kJ/mol to match endothermicity of reaction.""")</span></td>
 </tr>
 <tr class="energy Surface_Addition_Single_vdW hide_energy">
     <td></td>
@@ -28179,7 +28180,8 @@ family: Surface_Addition_Single_vdW""")</span></td>
 ! Euclidian distance = 1.0
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
-CO2*(15)+HCO*(16)=X(1)+C2HO3X(96)                   7.849146e+22 -0.517    45.009   
+! Ea raised from 143.2 to 145.0 kJ/mol to match endothermicity of reaction.
+CO2*(15)+HCO*(16)=X(1)+C2HO3X(96)                   6.250000e+24 -0.475    34.666   
 </td>
 </tr>
 </tbody>
@@ -28238,8 +28240,8 @@ CO2*(15)+HCOO*(17)=X(1)+C2HO4X(97)                  2.325841e+22 0.000     11.53
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-2.2</td><td>+7.5</td><td>+10.7</td><td>+12.3</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(188.317,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
+    <td>+7.3</td><td>+13.2</td><td>+15.2</td><td>+16.2</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(117.2,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW""")</span></td>
@@ -28259,7 +28261,7 @@ family: Surface_Addition_Single_vdW""")</span></td>
 ! Euclidian distance = 1.0
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
-CO2*(15)+HCOO*(17)=X(1)+C2HO4X(98)                  7.849146e+22 -0.517    45.009   
+CO2*(15)+HCOO*(17)=X(1)+C2HO4X(98)                  6.250000e+24 -0.475    28.011   
 </td>
 </tr>
 </tbody>
@@ -28398,8 +28400,8 @@ CO2*(15)+COOH*(18)=X(1)+C2HO4X(99)                  1.243000e+22 0.000     20.06
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-2.2</td><td>+7.5</td><td>+10.7</td><td>+12.3</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(188.317,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;C*]
+    <td>+7.3</td><td>+13.2</td><td>+15.2</td><td>+16.2</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(117.2,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;C*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW""")</span></td>
@@ -28419,7 +28421,7 @@ family: Surface_Addition_Single_vdW""")</span></td>
 ! Euclidian distance = 1.0
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
-CO2*(15)+COOH*(18)=X(1)+SX(100)                     7.849146e+22 -0.517    45.009   
+CO2*(15)+COOH*(18)=X(1)+SX(100)                     6.250000e+24 -0.475    28.011   
 </td>
 </tr>
 </tbody>
@@ -28634,8 +28636,8 @@ CO2*(15)+CH3O*(20)=X(1)+SX(101)                     2.325841e+22 0.000     11.53
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-6.1</td><td>+5.6</td><td>+9.4</td><td>+11.3</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(225.62,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
+    <td>-4.1</td><td>+7.6</td><td>+11.4</td><td>+13.3</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(225.62,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW
@@ -28657,7 +28659,7 @@ Ea raised from 223.2 to 225.6 kJ/mol to match endothermicity of reaction.""")</s
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
 ! Ea raised from 223.2 to 225.6 kJ/mol to match endothermicity of reaction.
-CO2*(15)+CH3O*(20)=X(1)+SX(102)                     7.849146e+22 -0.517    53.924   
+CO2*(15)+CH3O*(20)=X(1)+SX(102)                     6.250000e+24 -0.475    53.924   
 </td>
 </tr>
 </tbody>
@@ -28794,8 +28796,8 @@ CO2*(15)+CH3O2*(21)=X(1)+SX(103)                    2.325841e+22 0.000     11.53
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-2.9</td><td>+7.2</td><td>+10.5</td><td>+12.1</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(194.976,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
+    <td>-0.9</td><td>+9.2</td><td>+12.5</td><td>+14.1</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(194.976,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW
@@ -28817,7 +28819,7 @@ Ea raised from 189.7 to 195.0 kJ/mol to match endothermicity of reaction.""")</s
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
 ! Ea raised from 189.7 to 195.0 kJ/mol to match endothermicity of reaction.
-CO2*(15)+CH3O2*(21)=X(1)+SX(104)                    7.849146e+22 -0.517    46.600   
+CO2*(15)+CH3O2*(21)=X(1)+SX(104)                    6.250000e+24 -0.475    46.600   
 </td>
 </tr>
 </tbody>
@@ -32743,8 +32745,8 @@ DUPLICATE
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-30.9</td><td>-6.8</td><td>+1.1</td><td>+5.1</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(463.112,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;C*]
+    <td>-28.9</td><td>-4.8</td><td>+3.2</td><td>+7.1</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(463.112,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;C*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW
@@ -32766,7 +32768,7 @@ Ea raised from 459.6 to 463.1 kJ/mol to match endothermicity of reaction.""")</s
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
 ! Ea raised from 459.6 to 463.1 kJ/mol to match endothermicity of reaction.
-CO2*(15)+CO2X(51)=X(1)+SX(230)                      7.849146e+22 -0.517    110.686  
+CO2*(15)+CO2X(51)=X(1)+SX(230)                      6.250000e+24 -0.475    110.686  
 DUPLICATE
 </td>
 </tr>
@@ -32786,8 +32788,8 @@ DUPLICATE
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-40.5</td><td>-11.7</td><td>-2.1</td><td>+2.7</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(555.105,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
+    <td>-38.5</td><td>-9.6</td><td>-0.0</td><td>+4.7</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(555.105,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW
@@ -32809,7 +32811,7 @@ Ea raised from 550.4 to 555.1 kJ/mol to match endothermicity of reaction.""")</s
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
 ! Ea raised from 550.4 to 555.1 kJ/mol to match endothermicity of reaction.
-CO2*(15)+CO2X(51)=X(1)+SX(231)                      7.849146e+22 -0.517    132.673  
+CO2*(15)+CO2X(51)=X(1)+SX(231)                      6.250000e+24 -0.475    132.673  
 </td>
 </tr>
 </tbody>
@@ -34629,8 +34631,8 @@ COX(60)+CO2*(15)=X(1)+SX(249)                       2.325841e+22 0.000     205.8
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-32.5</td><td>-7.7</td><td>+0.6</td><td>+4.7</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(478.971,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
+    <td>-30.5</td><td>-5.6</td><td>+2.6</td><td>+6.7</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(478.971,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW
@@ -34652,7 +34654,7 @@ Ea raised from 474.9 to 479.0 kJ/mol to match endothermicity of reaction.""")</s
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
 ! Ea raised from 474.9 to 479.0 kJ/mol to match endothermicity of reaction.
-COX(60)+CO2*(15)=X(1)+SX(250)                       7.849146e+22 -0.517    114.477  
+COX(60)+CO2*(15)=X(1)+SX(250)                       6.250000e+24 -0.475    114.477  
 </td>
 </tr>
 </tbody>
@@ -37039,8 +37041,8 @@ CO2*(15)+CHOX2(61)=X(1)+SX(251)                     2.325841e+22 0.000     103.9
 <tr class="KineticsData_Tdata"><th>T/[K]</th>
 <td>500</td><td>1000</td><td>1500</td><td>2000</td>
 </tr><tr class="KineticsData_kdata"><th>log<sub>10</sub>(k/[mole,m,s])
-    <td>-38.8</td><td>-10.8</td><td>-1.5</td><td>+3.1</td>
-</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(7.84915e+18,'m^2/(mol*s)'), n=-0.516576, Ea=(539.365,'kJ/mol'), T0=(1,'K'), Tmin=(303.03,'K'), Tmax=(2000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
+    <td>-36.8</td><td>-8.8</td><td>+0.5</td><td>+5.1</td>
+</tr></table><span class='KineticsData_repr'>SurfaceArrhenius(A=(6.25e+20,'m^2/(mol*s)'), n=-0.475, Ea=(539.365,'kJ/mol'), T0=(1,'K'), Tmin=(200,'K'), Tmax=(3000,'K'), comment="""Estimated using template [CO2;Adsorbate1] for rate rule [CO2;O*]
 Euclidian distance = 1.0
 Multiplied by reaction path degeneracy 2.0
 family: Surface_Addition_Single_vdW
@@ -37062,7 +37064,7 @@ Ea raised from 538.3 to 539.4 kJ/mol to match endothermicity of reaction.""")</s
 ! Multiplied by reaction path degeneracy 2.0
 ! family: Surface_Addition_Single_vdW
 ! Ea raised from 538.3 to 539.4 kJ/mol to match endothermicity of reaction.
-CO2*(15)+CHOX2(61)=X(1)+SX(252)                     7.849146e+22 -0.517    128.911  
+CO2*(15)+CHOX2(61)=X(1)+SX(252)                     6.250000e+24 -0.475    128.911  
 </td>
 </tr>
 </tbody>
